--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ unstructured>=0.10.0
 pypdf>=3.0.0
 python-docx>=1.1.0
 pymupdf>=1.24.1  # For 'fitz' to handle PDFs
-duckduckgo-search>=5.1.0
+duckduckgo-search==5.2.2
 asteval>=0.9.31
 # chromadb>=0.4.0
 sentence-transformers>=2.7.0
