--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ tqdm
 fastapi>=0.111.0
 uvicorn>=0.30.0
 langchain>=0.1.0
-langchain-community>=0.0.30
+langchain-community==0.0.36
 langchain-openai>=0.1.0
 langgraph>=0.0.60
 unstructured>=0.10.0
