--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,29 @@
-fastapi==0.111.0
-uvicorn==0.30.0
-langchain==0.1.16
-langchain-core==0.1.42
+fastapi
+uvicorn
+langchain
+openai
+tqdm
+fastapi>=0.111.0
+uvicorn>=0.30.0
+langchain>=0.1.0
 langchain-community==0.0.36
-langchain-openai==0.1.3
-openai==1.40.0
-tqdm==4.66.5
-langgraph==0.0.60
-unstructured==0.10.30
-pypdf==3.16.0
-python-docx==1.1.0
-pymupdf==1.24.1  # For 'fitz' to handle PDFs
+langchain-openai>=0.1.0
+langgraph>=0.0.60
+unstructured>=0.10.0
+pypdf>=3.0.0
+python-docx>=1.1.0
+pymupdf>=1.24.1  # For 'fitz' to handle PDFs
 duckduckgo-search==5.2.2
-asteval==0.9.31
-sentence-transformers==2.7.0
-gunicorn==21.2.0
-python-multipart==0.0.9
-streamlit==1.37.0
-langchain-huggingface==0.0.3
-transformers==4.42.0
-psycopg2-binary==2.9.9
-pgvector==0.2.5
-faiss-cpu==1.8.0
+asteval>=0.9.31
+# chromadb>=0.4.0
+sentence-transformers>=2.7.0
+gunicorn
+python-multipart
+streamlit
+# pysqlite3-binary
+langchain-huggingface
+transformers
+sentence-transformers
+psycopg2-binary
+pgvector
+faiss-cpu
